[package]
name = "rustcmdpev"
version = "0.1.0"
authors = ["Bruce P <treble37@users.noreply.github.com>"]
description = "A Postgres query visualizer"
edition = "2018"
repository = "https://github.com/treble37/rustcmdpev"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.0.0", features = ["json"] }
serde_json = "1.0"
colored = "1.9"
phf = {version = "0.11.1", features = ["macros"]}
textwrap = {version = "0.16", features = ["terminal_size"]}

[[bin]]
name = "rustcmdpev"
path = "src/main.rs"

[lib]
name = "rustcmdpev"
path = "src/lib.rs"
