[workspace]
resolver = "3"
members = ["rustcmdpev", "rustcmdpev-core"]

# G9.6 — Workspace-wide lint policy. Members opt in by setting
# `[lints] workspace = true` in their own `Cargo.toml`. Keeping the policy
# centralised means every crate, bench, and integration test in the
# workspace shares the same warning floor and clippy bar.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
# Strict groups: every clippy warning must be resolved or explicitly allowed.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pragmatic carve-outs: pedantic lints we have weighed and accepted.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
similar_names = "allow"
too_many_lines = "allow"
doc_markdown = "allow"
items_after_statements = "allow"
needless_pass_by_value = "allow"
unnecessary_wraps = "allow"
return_self_not_must_use = "allow"
struct_excessive_bools = "allow"
unused_self = "allow"
single_match_else = "allow"
match_same_arms = "allow"
if_not_else = "allow"
no_effect_underscore_binding = "allow"
redundant_closure_for_method_calls = "allow"
trivially_copy_pass_by_ref = "allow"
implicit_hasher = "allow"
ignored_unit_patterns = "allow"
manual_let_else = "allow"
unnested_or_patterns = "allow"
inefficient_to_string = "allow"
single_match = "allow"
let_underscore_untyped = "allow"
explicit_iter_loop = "allow"
uninlined_format_args = "allow"
manual_string_new = "allow"
collapsible_if = "allow"
collapsible_else_if = "allow"
needless_collect = "allow"
unused_async = "allow"
needless_return = "allow"
ptr_as_ptr = "allow"
borrow_as_ptr = "allow"
ref_option = "allow"
struct_field_names = "allow"
wildcard_imports = "allow"
default_trait_access = "allow"
explicit_into_iter_loop = "allow"
needless_for_each = "allow"
must_use_unit = "allow"
manual_assert = "allow"
unnecessary_box_returns = "allow"
option_if_let_else = "allow"
fn_params_excessive_bools = "allow"
needless_raw_string_hashes = "allow"
redundant_else = "allow"
bool_to_int_with_if = "allow"
map_unwrap_or = "allow"
range_plus_one = "allow"
manual_range_contains = "allow"
let_and_return = "allow"
needless_lifetimes = "allow"
useless_let_if_seq = "allow"
implicit_clone = "allow"
match_wildcard_for_single_variants = "allow"
no_effect_replace = "allow"
or_fun_call = "allow"
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
explicit_deref_methods = "allow"
manual_strip = "allow"
unwrap_used = "allow"
unwrap_in_result = "allow"
expect_used = "allow"
panic = "allow"
indexing_slicing = "allow"
arithmetic_side_effects = "allow"
float_cmp = "allow"
non_send_fields_in_send_ty = "allow"
