[package]
name = "rustcmdpev-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.15.1", features = ["json"] }
serde_json = "1.0"
colored = "3.0"
phf = { version = "0.13.1", features = ["macros"] }
textwrap = { version = "0.16", features = ["terminal_size"] }
