[package]
name = "rustcmdpev"
version = "0.1.0"
edition = "2021"
description = "Visualize PostgreSQL EXPLAIN JSON output in a terminal-friendly tree"
license = "MIT"
repository = "https://github.com/treble37/rustcmdpev"
homepage = "https://github.com/treble37/rustcmdpev"
documentation = "https://docs.rs/rustcmdpev"
readme = "../README.md"
keywords = ["postgres", "explain", "cli", "query-plan"]
categories = ["command-line-utilities", "database"]
rust-version = "1.84"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
rustcmdpev-core = { path = "../rustcmdpev-core", version = "0.1.0" }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
